Integrating contracts with Chainlink VRF for generating random numbers securely.
Signed-off-by: Nikolay Nedkov <nikolay.nedkov@limechain.tech>

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ PRIVATE_KEY=${PRIVATE_KEY}
 ALCHEMY_URL=https://eth-goerli.g.alchemy.com/v2/${ALCHEMY_API_KEY}
 ETHERSCAN_API=${ETHERSCAN_API_KEY}
 NFT_API=${NFT_API_KEY}
+CHAIN_ID=31337
